--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,21 +95,22 @@ header .header-data .header-right h4::before {
   align-items: center;
   gap: 99px;
 }
-@media (max-width: 1199px) {
+@media (max-width: 991px) {
   .main .main-data {
-    flex-direction: column;
-    gap: 0px;
+    gap: 51px;
   }
 }
 @media (max-width: 575px) {
   .main .main-data {
     flex-direction: row;
     justify-content: space-between;
+    padding-left: 6px;
+    padding-right: 6px;
   }
 }
-@media (max-width: 1199px) {
+@media (max-width: 1024px) {
   .main .main-data .logo-img {
-    margin-bottom: 30px;
+    width: 180px;
   }
 }
 @media (max-width: 575px) {
@@ -126,13 +127,11 @@ header .header-data .header-right h4::before {
 @media (max-width: 1199px) {
   .main .main-data .main-tab-box {
     justify-content: center;
-    flex-wrap: nowrap;
   }
 }
 @media (max-width: 768px) {
   .main .main-data .main-tab-box {
     justify-content: center;
-    flex-wrap: wrap;
   }
 }
 .main .main-data .main-tab-box .main-left-data {
@@ -148,6 +147,21 @@ header .header-data .header-right h4::before {
   margin: 5px 6px;
   padding: 19px 55px;
 }
+@media (max-width: 1199px) {
+  .main .main-data .main-tab-box .main-left-data .main-border {
+    padding: 12px 34px;
+  }
+}
+@media (max-width: 1024px) {
+  .main .main-data .main-tab-box .main-left-data .main-border {
+    padding: 15px 50px;
+  }
+}
+@media (max-width: 991px) {
+  .main .main-data .main-tab-box .main-left-data .main-border {
+    padding: 7px 24px;
+  }
+}
 .main .main-data .main-tab-box .main-left-data .main-border:hover {
   cursor: pointer;
 }
@@ -162,6 +176,18 @@ header .header-data .header-right h4::before {
   letter-spacing: 5px;
   margin-bottom: 0;
   text-shadow: -2px -2px 0 white, 2px -2px 0 white, -2px 2px 0 white, 2px 2px 0 white;
+}
+@media (max-width: 1024px) {
+  .main .main-data .main-tab-box .main-left-data .main-border h3 {
+    font-size: 18px;
+    line-height: 26px;
+  }
+}
+@media (max-width: 699px) {
+  .main .main-data .main-tab-box .main-left-data .main-border h3 {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
 .main .main-data .main-tab-box .main-left-data .main-border .text-orange {
   color: #f6774e;
@@ -377,14 +403,16 @@ header .header-data .header-right h4::before {
     padding: 0 10px;
   }
 }
-@media (max-width: 575px) {
-  .right-sidebar .rightside-title {
-    display: flex;
-  }
-}
 @media (max-width: 768px) {
   .right-sidebar .rightside-title.quotation-title {
     flex-direction: column;
+  }
+}
+@media (max-width: 575px) {
+  .right-sidebar .rightside-title {
+    display: flex;
+    padding-left: 6px;
+    padding-right: 6px;
   }
 }
 .right-sidebar .rightside-title h2 {
@@ -485,6 +513,8 @@ header .header-data .header-right h4::before {
 @media (max-width: 575px) {
   .right-sidebar .content h4 {
     margin-bottom: 14px;
+    padding-left: 6px;
+    padding-right: 6px;
   }
 }
 .right-sidebar .content .updated-h3 {
@@ -498,6 +528,8 @@ header .header-data .header-right h4::before {
 @media (max-width: 575px) {
   .right-sidebar .content .updated-h3 {
     margin-bottom: 30px;
+    padding-left: 6px;
+    padding-right: 6px;
   }
 }
 .right-sidebar .content-box {
@@ -512,6 +544,8 @@ header .header-data .header-right h4::before {
     justify-content: center;
     align-items: center;
     margin-bottom: 24px;
+    padding-left: 6px;
+    padding-right: 6px;
   }
 }
 .right-sidebar .content-box .box {
@@ -554,6 +588,12 @@ header .header-data .header-right h4::before {
   font-weight: 700;
   margin-bottom: 29px;
 }
+@media (max-width: 575px) {
+  .right-sidebar .table-nav .watch-history .watch-history-h3 {
+    padding-left: 6px;
+    padding-right: 6px;
+  }
+}
 .right-sidebar .table-nav .hours-div {
   display: flex;
   gap: 10px;
@@ -562,8 +602,15 @@ header .header-data .header-right h4::before {
 }
 @media (max-width: 768px) {
   .right-sidebar .table-nav .hours-div {
-    flex-wrap: wrap;
     margin-bottom: 20px;
+  }
+}
+@media (max-width: 575px) {
+  .right-sidebar .table-nav .hours-div {
+    padding-left: 6px;
+    padding-right: 6px;
+    flex-direction: column;
+    align-items: start;
   }
 }
 .right-sidebar .table-nav .hours-div h2 {
@@ -575,7 +622,7 @@ header .header-data .header-right h4::before {
 }
 @media (max-width: 575px) {
   .right-sidebar .table-nav .hours-div h2 {
-    margin-bottom: 25px;
+    margin-bottom: 10px;
   }
 }
 .right-sidebar .table-nav .hours-div .btn {
@@ -604,6 +651,8 @@ header .header-data .header-right h4::before {
   .right-sidebar .date-range {
     flex-direction: column;
     align-items: start;
+    padding-left: 6px;
+    padding-right: 6px;
   }
 }
 .right-sidebar .date-range h3,
