--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -141,10 +141,15 @@ header {
   .main-data {
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
     gap: 99px;
-
-    @media (max-width:991px) {
+    @media (max-width: #{$xll}) {
+      justify-content: center;
+    }
+    @media (max-width:1024px) {
      gap: 51px;
+     padding: 0;
     }
     @media (max-width: #{$sm}) {
       flex-direction: row;
@@ -482,8 +487,8 @@ header {
         @include latter-space();
         padding: 17px 38px;
         margin-bottom: 0;
-        @media (max-width: #{$xs}) {
-          padding: 17px 10px;
+        @media (max-width: #{$sm}) {
+          padding: 17px 24px;
         }
       }
     }
@@ -507,6 +512,12 @@ header {
       @media (max-width: #{$sm}) {
         font-size: 18px;
         margin-bottom: 42px;
+      }
+      @media (max-width: #{$xs}) {
+        font-size: 16px;
+      }
+      @media (max-width: #{$xss}) {
+        font-size: 14px;
       }
     
     }
@@ -693,9 +704,11 @@ header {
          width: 317px;
          height: 50px;
         }
+        @media (max-width: #{$xs}) {
+         width: 298px;
+        }
         @media (max-width: #{$xss}) {
-         width: 274px;
-         height: 50px;
+         width: 256px;
         }
       }
     }
@@ -820,10 +833,13 @@ footer {
       line-height: 20px;
       font-weight: 400;
       color: #444444;
-      margin-bottom: 0;
+      margin-bottom: 0; padding-left:130px;
 
       @media (max-width: #{$xlll}) {
-        padding-left: 170px;
+        padding-left:77px;
+      }
+      @media (max-width: #{$xll}) {
+        padding-left: 104px;
       }
       @media (max-width: #{$xl}) {
         padding-left: 193px;
@@ -832,7 +848,7 @@ footer {
         padding-left: 0;
       }
       @media (max-width: #{$sm}) {
-        margin-bottom: 10px;
+        margin-bottom: 6px;
       }
     }
     .footer-right {
@@ -842,6 +858,7 @@ footer {
       @media (max-width: #{$sm}) {
         flex-wrap: wrap;
         justify-content: center;
+        gap: 5px;
       }
       li {
         font-size: 14px;
@@ -875,6 +892,16 @@ footer {
 // -----profile_edit page start----------
 
 .right-sidebar {
+  @media (max-width: #{$med}) {
+    &.mobile-screen-right{
+      padding:0 36px;
+    }
+  }
+  @media (max-width: #{$sm}) {
+    &.mobile-screen-right{
+      padding:0 19px;
+    }
+  }
   .rightside-title {
     .title_space {
       @include latter-space();
@@ -886,14 +913,25 @@ footer {
     border-radius: 29px;
     padding: 43px 26px;
     width: 86%;
-    @media (max-width: #{$xlll}) {
-      width: 73%;
+    // @media (max-width: #{$xlll}) {
+    //   width: 84%;
+    // }
+    @media (max-width: #{$xll}) {
+      width: 86%;
+    }
+    @media (max-width: #{$xl}) {
+      width: 90%;
     }
     @media (max-width: #{$med}) {
       width: 100%;
     }
     @media (max-width: #{$sm}) {
-      padding: 33px 26px;
+      padding: 47px 23px 52px 23px;
+      margin-bottom: 90px;
+    }
+    @media (max-width: #{$xss}) {
+      padding: 47px 10px 52px 10px;
+      margin-bottom: 90px;
     }
 
     .account-h3 {
@@ -903,6 +941,9 @@ footer {
       @include latter-space();
       color: $green-color;
       font-weight: 700;
+      @media (max-width: #{$sm}) {
+        margin-bottom: 19px;
+      }
     }
     .login-data {
       margin-bottom: 39px;
@@ -922,10 +963,14 @@ footer {
             flex-direction: column;
             gap: 6px;
           }
+        
         }
       }
       .dot-style {
         padding-left: 10px;
+        @media (max-width: #{$sm}) {
+          margin-bottom: 62px;
+        }
         li {
           position: relative;
           &::after {
@@ -938,30 +983,42 @@ footer {
             height: 4px;
             border-radius: 50%;
           }
+         
         }
       }
       li {
-        display: flex;
-        gap: 51px;
         @media (max-width: #{$sm}) {
           gap: 20px;
+        }
+        .login-detail{
+          display: flex;
+          @media (max-width: #{$sm}) {
+          flex-direction: column;
+          margin-bottom: 15px;
+          }
+          h4{
+            width: 150px;
+            @media (max-width: #{$sm}) {
+             width: 100%;
+              }
+          }
         }
         h4 {
           margin-bottom: 15px;
           font-weight: 500;
           font-size: 18px;
-          // @include latter-space();
           line-height: 24px;
           color: #3a3a3a;
-
           @media (max-width: #{$sm}) {
-            font-size: 14px;
-            line-height: 16px;
-          }
+           margin-bottom: 4px;
+           &.custm-mb{
+             margin-bottom: 19px;
+           }
+            }
           @media (max-width: #{$xss}) {
-            font-size: 12px;
-            line-height: 14px;
-          }
+          font-size: 16px;
+          line-height: 20px;
+            }
         }
       }
     }
@@ -980,7 +1037,13 @@ footer {
     padding: 0 8px;
   }
   &.msg_rightside {
-    width: 82%;
+    width: 86%;
+    @media (max-width: #{$xlll}) {
+      width: 82%;
+    }
+    @media (max-width: #{$xll}) {
+      width: 78%;
+    }
     @media (max-width: #{$xl}) {
       width: 73%;
     }
@@ -999,6 +1062,7 @@ footer {
       }
       @media (max-width: #{$sm}) {
         grid-template-columns: repeat(1, 1fr);
+        gap: 26px;
       }
     }
     .message-content {
@@ -1041,7 +1105,7 @@ footer {
             height: 61px;
           }
           @media (max-width: #{$sm}) {
-            height: 50px;
+            height: 60px;
           }
           h3 {
             margin-bottom: 11px;
@@ -1050,10 +1114,6 @@ footer {
             font-weight: 700;
             color: #3a3a3a;
 
-            @media (max-width: #{$sm}) {
-              font-size: 16px;
-              line-height: 20px;
-            }
           }
         }
         p {
@@ -1062,10 +1122,7 @@ footer {
           line-height: 25px;
           font-weight: 400;
           margin-bottom: 15px;
-          @media (max-width: #{$sm}) {
-            font-size: 16px;
-            line-height: 20px;
-          }
+        
         }
       }
       .msg-btn {
@@ -1081,8 +1138,6 @@ footer {
           border-top-right-radius: 0;
           @media (max-width: #{$sm}) {
             padding: 10px 0;
-            font-size: 16px;
-            line-height: 20px;
           }
         }
       }
@@ -1494,7 +1549,7 @@ footer {
 }
 
 
-// ---grid-table
+// ---grid-table dashboard table start
 .grid-table{
   .table-head{
     display: flex;
@@ -1632,7 +1687,6 @@ footer {
     }
   }
 }
-
 .w-2{
   width: 18px;
 }
@@ -1702,3 +1756,7 @@ footer {
        }
     }
   }
+  .height-2{
+    height: 200px;
+  }
+  // ---dashboard table end
